<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_water_mask"
    tools:context=".activity.LoginActivity">

    <com.dokiwa.dokidoki.ui.view.WaterMaskView
        app:wm_text="@string/login_watermark"
        tools:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.dokiwa.dokidoki.ui.view.ToolBar
        android:id="@+id/toolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:tb_left_ic="@drawable/ic_back_light"
        app:tb_title_color="@color/white"
        android:background="@color/transparent"
        tools:layout_height="44dp"
        tools:background="@color/dd_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="76dp"
        android:text="@string/login_bind_phone"
        android:id="@+id/loginTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/phoneEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:background="@drawable/bg_edit_round_corner"
        android:lines="1"
        android:hint="@string/login_phone_number_hint"
        android:maxLength="11"
        android:inputType="phone"
        android:autofillHints="@string/login_by_phone_number"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:elevation="10dp"
        tools:text="13012345678"
        tools:ignore="UnusedAttribute">

        <requestFocus/>
    </EditText>

    <TextView
        app:layout_constraintLeft_toLeftOf="@+id/phoneEditText"
        app:layout_constraintTop_toTopOf="@+id/phoneEditText"
        app:layout_constraintBottom_toBottomOf="@+id/phoneEditText"
        android:elevation="10dp"
        android:text="@string/login_plus_86"
        android:textSize="16sp"
        android:textColor="@color/text_dft"
        android:gravity="center"
        android:maxLines="1"
        android:layout_width="70dp"
        android:layout_height="0dp"/>

    <EditText
        android:id="@+id/codeEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:paddingStart="20dp"
        android:paddingEnd="70dp"
        android:background="@drawable/bg_edit_round_corner"
        android:lines="1"
        android:hint="@string/login_verify_input"
        android:maxLength="6"
        android:inputType="phone"
        android:autofillHints="@string/login_verify_input"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:elevation="10dp"
        tools:ignore="UnusedAttribute"/>

    <TextView
        android:id="@+id/countDownTip"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@+id/codeEditText"
        app:layout_constraintBottom_toBottomOf="@+id/codeEditText"
        app:layout_constraintRight_toRightOf="@+id/codeEditText"
        android:gravity="center"
        android:elevation="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/log_verify_fetch"
        android:textColor="@color/dd_red"
        android:textSize="12sp"/>

    <View
        app:layout_constraintTop_toTopOf="@+id/codeEditText"
        app:layout_constraintBottom_toBottomOf="@+id/codeEditText"
        app:layout_constraintRight_toLeftOf="@+id/countDownTip"
        android:elevation="20dp"
        android:background="@drawable/bg_line_vertical"
        android:layout_width="4dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeEditText"
        android:layout_marginTop="70dp"
        android:elevation="10dp"
        android:text="@string/login_usage_protocol"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/confirmBtn"
        android:background="@drawable/bg_btn_round_border_white"
        app:layout_constraintLeft_toLeftOf="@+id/tip"
        app:layout_constraintRight_toRightOf="@+id/tip"
        app:layout_constraintTop_toBottomOf="@+id/tip"
        android:text="@string/login_submit_confirm"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="44dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>