<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_water_mask"
    tools:context=".activity.LoginActivity">

    <com.dokiwa.dokidoki.ui.view.WaterMaskView
        app:wm_text="@string/login_watermark"
        tools:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.dokiwa.dokidoki.ui.view.AppToolBar
        android:id="@+id/toolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/AppToolBar.Icon.Left"
        android:background="@color/transparent"
        tools:layout_height="44dp"
        tools:background="@color/dd_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="76dp"
        android:text="@string/login_by_phone_number"
        android:id="@+id/loginTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:background="@drawable/bg_edit_round_corner"
        android:lines="1"
        android:hint="@string/login_phone_number_hint"
        android:maxLength="11"
        android:inputType="phone"
        android:autofillHints="@string/login_by_phone_number"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:elevation="10dp"
        tools:ignore="UnusedAttribute">

        <requestFocus/>
    </EditText>

    <TextView
        app:layout_constraintLeft_toLeftOf="@id/editText"
        app:layout_constraintTop_toTopOf="@id/editText"
        app:layout_constraintBottom_toBottomOf="@id/editText"
        android:elevation="10dp"
        android:text="+86"
        android:textSize="16sp"
        android:textColor="@color/text_dft"
        android:gravity="center"
        android:layout_width="70dp"
        android:layout_height="0dp"/>

    <TextView
        android:id="@+id/tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginTop="120dp"
        android:elevation="10dp"
        android:text="@string/login_usage_protocol"
        tools:text="@string/login_usage_third_party"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/confirmBtn"
        android:background="@drawable/bg_btn_round_border_white"
        app:layout_constraintLeft_toLeftOf="@+id/tip"
        app:layout_constraintRight_toRightOf="@+id/tip"
        app:layout_constraintTop_toBottomOf="@+id/tip"
        tools:visibility="gone"
        android:text="@string/login_submit_confirm"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="44dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/loginByQQ"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tip"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/loginByWechat"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_qq"
        android:layout_width="44dp"
        android:layout_height="44dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/loginByWechat"
        app:layout_constraintTop_toBottomOf="@id/tip"
        app:layout_constraintLeft_toRightOf="@+id/loginByQQ"
        app:layout_constraintRight_toLeftOf="@+id/loginByWeibo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_wechat"
        android:layout_width="44dp"
        android:layout_height="44dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/loginByWeibo"
        app:layout_constraintTop_toBottomOf="@id/tip"
        app:layout_constraintLeft_toRightOf="@id/loginByWechat"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="?selectableItemBackgroundBorderless"
        android:src="@drawable/ic_weibo"
        android:layout_width="44dp"
        android:layout_height="44dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>