<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_water_mask"
    tools:context=".activity.LoginActivity">

    <com.dokiwa.dokidoki.ui.view.WaterMaskView
        app:wm_text="@string/login_watermark"
        tools:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.dokiwa.dokidoki.ui.view.AppToolBar
        android:id="@+id/toolBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/AppToolBar.Icon.Left"
        android:background="@color/transparent"
        tools:layout_height="44dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/verifyCodeTitle"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="76dp"
        android:text="@string/login_verify_code_tip"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/pinEntryEdit"
        app:layout_constraintTop_toBottomOf="@+id/verifyCodeTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:inputType="phone"
        android:maxLength="6"
        android:gravity="center_vertical"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:pinBackgroundDrawable="@color/white"
        app:pinAnimationType="popIn"
        app:pinCharacterSpacing="10dp"
        app:pinTextBottomPadding="10dp"
        app:pinBackgroundIsSquare="false">

        <requestFocus/>
    </com.alimuzaffar.lib.pin.PinEntryEditText>

    <TextView
        android:id="@+id/countDownTip"
        app:layout_constraintTop_toBottomOf="@+id/pinEntryEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_verify_count_down"
        android:textColor="@color/white_90"
        android:textSize="12sp"
        />

    <Button
        android:id="@+id/confirmBtn"
        android:background="@drawable/bg_btn_round_border_white"
        app:layout_constraintLeft_toLeftOf="@+id/pinEntryEdit"
        app:layout_constraintRight_toRightOf="@+id/pinEntryEdit"
        app:layout_constraintTop_toBottomOf="@+id/pinEntryEdit"
        android:text="@string/login_submit_confirm"
        android:textColor="@color/white"
        android:layout_marginTop="150dp"
        android:layout_width="200dp"
        android:layout_height="44dp"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>